yaml/Service-Mesh-2-Security/mtls/shopping2-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: shoppingportal2
    labels:
       name: shoppingportal2
       istio-injection: enabled
