yaml/Service-Mesh-2-Security/mtls/productreviewms-dr-mtls.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: productreviewms-dr
 namespace: shoppingportal
spec:
 host: "*.shoppingportal2.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
